Third commit - SignIn and Signup Page testcases implemented...

--- a/WEB_UI_Module/Artifacts/TestNG_Custom_Report.html
+++ b/WEB_UI_Module/Artifacts/TestNG_Custom_Report.html
@@ -5,6 +5,6 @@
 <td> nullAfdalAnalytics_5fAutomation_5fReport/ </td></tr><tr><th>Allure Report URL&#x2a;</td>
 <td> nullallure/ </td></tr><tr><th>AWS_BUILD&#x2a;</td>
 <td> sched </td></tr><tr><th>Environment URL </td>
-<td> https://www.afdalanalytics.com/ </td></tr><tr><th>Browser</td>
+<td> https://staging.afdalanalytics.com/ </td></tr><tr><th>Browser</td>
 <td> CHROME {<i>101.0.4951.41<i>}</td></tr><tr><th>Executed Date</td>
 <td> 2022-05-16 at 17:01:04 UTC </td></tr></table><p style="color:blue;font-size:12px;">&#x2a;Please use Jenkins Username and Password to access the Detailed report.</p><table><tr style="background-color:powderblue;"><th> Executed</th><th># Passed</th><th ># Failed</th><th> Duration</th></tr><tr><td class="num">1</td><td class="num">1</td><td class="num">0</td><td class="num">00:00:19</td></tr></table><table><thead><tr style="background-color:powderblue;"><th>Module</th><th>Test Case</th><th>Start</th><th>Seconds</th><th>Result</th></tr></thead><tbody><tr><th colspan="5">Afdal Analytics Validation Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="5">Afdal Analytics Login Page Ui Validation &#8212; Passed</th></tr><tr class="passedeven"><td rowspan="1">Afdal Analytics Login Page Ui Validation </td><td><a href="#m0">verifyHomePage</a></td><td rowspan="1">10:01:06 AM</td><td rowspan="1">13.89</td><td rowspan="1" bgcolor="#00cc00">PASS</td></tr></tbody></table></body></html>
